7018378: JSR 292: _bound_int_mh produces wrong result on 64-bit SPARC

Reviewed-by: kvn